# solana-server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  test_script.sh
src/: main.rs
src/modules/: account.rs  airdrop.rs  keypair.rs  message.rs  mod.rs  send.rs  token.rs  transfer.rs
src/utils/: errors.rs  mod.rs  solana_client.rs
