[package]
name = "solana-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.36.0", features = ["full"] }
solana-sdk = "1.18.4"
solana-client = "1.18.4"
spl-token = "3.5.0"
spl-associated-token-account = "2.3.0"
dotenv = "0.15.0"
reqwest = "0.11.4"
uuid = { version = "1.7.0", features = ["v4"] }
rand = "0.8.5"
base64 = "0.22.0"
bincode = "1.3.3"
chrono = "0.4.35"
tracing = "0.1.40"
tracing-subscriber = "0.3.0"
anyhow = "1.0"
thiserror = "1.0"
bs58 = "0.5.0"
